# T0R0-IMU

./: CMakeLists.txt  IMU_i2c.c  IMU_i2c.h  IMU_metric.c  IMU_metric.h  IMU_raw.c  IMU_raw.h  MadgwickAHRS.cpp  MadgwickAHRS.h  MahonyAHRS.cpp  MahonyAHRS.h  Makefile  MakefileOLD  configuration_parser.c  configuration_parser.h  maintest.c  maintest.cpp  quaternions.c  quaternions.h
